# mail-to-me

./: .gitignore  README.md  app.py  data_packs.py  docker-compose.yml  importz.py  pullrequest.txt  pyproject.toml  requirements.txt  send_mail.py
.devcontainer/: Dockerfile  devcontainer.json
.github/autopr/: pullrequest.txt
.github/workflows/: ci.yml
app/: Dockerfile  main.py
app/mail_to_me/config/: __init__.py  environment_configuration_provider.py
app/mail_to_me/errors/: payload_parse_error.py  recipient_not_given_error.py  sender_not_given_error.py
app/mail_to_me/models/: __init__.py  mail_to_me_response.py  mail_to_me_status.py
app/mail_to_me/smtp/message/: mtm_message.py  smtp_message.py
app/mail_to_me/smtp/server/: __init__.py  gmail_smtp_server.py  smtp_server.py
app/mail_to_me/utils/: __init__.py  parse_payload.py
app/templates/: demo.html  index.html  nopost.html  post.html
ci/: deploy-terraform.sh
ci/terraform/: container_app.tf  main.tf  variables.tf
docs/: deployment.md
src/api/: main.py  pyproject.toml
src/api/mail_to_me/: __init__.py  data_packs.py  importz.py
src/api/mail_to_me/errors/: __init__.py  mail_to_me_error.py
src/api/mail_to_me/smtp/message/: __init__.py  mtm_message.py  smtp_message.py
src/api/mail_to_me/smtp/server/: gmail_smtp_server.py  smtp_server.py
src/api/templates/: nopost.html
src/ui/: form.html
templates/: index.html  nopost.html  post.html
terraform/configurations/containerapp/env/: prod.tfbackend  prod.tfvars
