[tool.poetry]
name = "mail-to-me"
version = "0.1.0"
description = ""
authors = ["armck-hub"]
packages = [
    { include = "mail_to_me" }
]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0.3"
fastapi = "^0.74.1"
uvicorn = {extras = ["standard"], version = "^0.17.5"}

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
flake8 = "^4.0.1"
pep8-naming = "^0.12.1"
black = "^22.1.0"
mypy = "^0.931"
isort = "^5.10.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
